--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,16 @@ spring:
 #    cors:
 #      allowed-origins: *
   datasource:
+    url: jdbc:h2:file:./data/peopledb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     name: people
+    username: sa
+    password:
     generate-unique-name: false
   h2:
     console:
       enabled: true
 
   jpa:
+    hibernate:
+      ddl-auto: update
     show-sql: true
